--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,10 +13,14 @@
     "axios": "^1.13.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.11.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
