--- a/app/client/package.json
+++ b/app/client/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.2",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
